--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,40 @@ h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
+.container{
+  position: relative;
+  display:grid;
+  grid-template-columns: 25% 75%;
+  height: 70%;
+  gap: 20px;
+  background:#2c2a04;
+}
+.slogan{
+  position:absolute;
+  margin-top: 10px;
+  margin-left: 40%;
+  width: 50%;
+  z-index: 2;
+  text-align: center;
+}
+.background-image{
+  height: 55%;
+  margin-bottom: 30%;
+  margin-top:30%;
+  margin-left: 40%;
+  margin-right: 0;
+  z-index: 1;
+}
+.container::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #2c2a04;
+  z-index: 0;
+}
 
 button {
   border-radius: 8px;
