--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,7 @@
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
+    /*LogIn css starts here*/
 .APP {
   display: flex;
   justify-content: center;
@@ -85,7 +86,7 @@
   margin: 10px 0;
   filter: brightness(0); /* makes it black */
 }
-
+        /*LogIn css ends here*/
 
 @keyframes logo-spin {
   from {
