--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,37 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+body{
+  background-color: #fff;
+  font-family: "Avenir Next", Helvetica, sans-serif;
+}
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  margin: 0;
+  height: 100vh;
+  max-width: 100vw;
+}
+a{
+  text-decoration: none;
+  color: black;
+}
+ul{
+  padding: 0;
+  margin: 0;
+}
+li{
+  list-style: none;
+  margin: 4px 0px;
+}
+select{
+  padding: 10px;
+  border-radius: 5px;
+  width: 200px;
+}
+h4{
+  margin: 10px 0px;
 }
 
 .logo {
