--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
 .container {
   display: grid;
   grid-template-columns: 40% 60%;
-  height: 100vh;
 }
 
 .left-section {
@@ -11,21 +10,18 @@
 }
 
 .right-section {
-  background-color: #575050;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  height: 100vh; 
   box-sizing: border-box; 
 }
 
 
 .hero-box {
-  background-color: #2c2a04;
+  background-color: #fffc00;
   border-radius: 20px;
-  padding: 2rem;
-  margin: 1rem;
+  margin: 2rem;
   box-shadow: 0 0 10px rgba(0,0,0,0.3);
   display: flex;
   flex-direction: column;
@@ -36,23 +32,61 @@
 .slogan-image {
   max-width: 80%;
   height: auto;
+  transform: rotate(-7deg);
 }
 
 .people-image {
-  max-width: 90%;
-  height: auto;
+  width: 100%;
+  height: 20%;
+  object-fit: fill;
+  border-radius: 20px;
 }
 
 .middle-content {
   height: 280px;
   width: 100%;
-  background-color: #423c3c; 
+  background-color: #f9f9f9; 
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 16px;
+  grid-row-gap: 0px;
+}
+.middle-content li{
+  font-size: 14px;
 }
 
 .footer-placeholder {
   height: 60px;
   width: 100%;
-  background-color: #363030; 
+  background-color: rgb(38, 38, 38);
+}
+.footer-placeholder a {
+  line-height: 56px;
+  margin: 0px 20px;
+  color: white;
+  font-size: 14px;
+}
+  
+.div1 { 
+  grid-area: 1 / 1 / 2 / 2; 
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%; 
+}
+.div2 { 
+  grid-area: 1 / 2 / 2 / 3; 
+  padding: 2rem;
+}
+.div3 { 
+  grid-area: 1 / 3 / 2 / 4; 
+  padding: 2rem;
+}
+.div4 { 
+  grid-area: 1 / 4 / 2 / 5; 
+  padding: 2rem;
 }
 
 
