--- a/src/App.css
+++ b/src/App.css
@@ -47,16 +47,6 @@ h4{
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-    /*LogIn css starts here*/
-.APP {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
-  background-color: #f4f4f4;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
-
 .Container {
   display: flex;
   background: #fff;
@@ -73,6 +63,7 @@ h4{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  height: 100%;
 }
 
 .left h1 {
