--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,12 @@
 .left-section {
   background-color: #000; 
   padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #ffffff;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  height: 100vh;
 }
 
 .right-section {
@@ -15,6 +21,7 @@
   flex-direction: column;
   gap: 2rem;
   box-sizing: border-box; 
+  height: 100vh;
 }
 
 
